--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@carbon/vue": "^2.23.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
