--- a/hangman/package.json
+++ b/hangman/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "express": "^4.17.1",
+    "firebase": "^7.14.2",
     "serve-static": "^1.14.1",
-    "vue": "^2.6.11",
-    "vuetify": "^2.2.19"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
